--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-production": "run-s clean && run-p typescript importmap && run-s bundle web-production",
     "web-production": "node x/web/build.js production",
     "bundle": "rollup x/main.js -p @rollup/plugin-node-resolve --format es --file x/main.bundle.js",
-    "importmap": "importly --root=/multi-step-form --host=node_modules < package-lock.json > x/importmap.json",
+    "importmap": "importly --host=node_modules < package-lock.json > x/importmap.json",
     "http": "http-server",
     "web": "turtle --in s/web:x/web --out x --verbose true",
     "start": "run-p http watch",
