--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@
 name: 🚀 release to github pages
 on:
   push:
-    branches: ["main"]
+    branches: ["main-1"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
