--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "kanban task management web app",
   "main": "index.js",
   "scripts": {
-		"build": "run-s clean && run-p typescript importmap && run-s bundle",
+    "build": "run-s clean && run-p typescript importmap && run-s bundle",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf x && mkdir -p x",
     "build-production": "run-s clean && run-p typescript importmap && run-s bundle web-production",
@@ -21,17 +21,18 @@
   },
   "author": "zenkyuv",
   "license": "ISC",
-	"devDependencies": {
-		"http-server": "^14.1.1",
-		"importly": "^0.2.0",
-		"npm-run-all": "^4.1.5",
-		"typescript": "^4.9.5"
+  "devDependencies": {
+    "http-server": "^14.1.1",
+    "importly": "^0.2.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@benev/frog": "^0.3.0",
     "@benev/turtle": "^0.1.2",
-		"es-module-shims": "^1.7.0",
     "@chasemoskal/magical": "^0.1.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "es-module-shims": "^1.7.0",
     "lit": "^2.6.1",
     "rollup": "^3.24.0"
   }
